syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.Global.Protos.Requests";

package SessionHandler;

message RGSSessionRegisterRequest
{
		int32 Account = 1;
}
