syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.Global.Protos.Responses";

package SessionHandler;

message RGSSessionContainsResponse
{
		bool Result = 1;
}
