syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.Global.Protos.Responses";

package SessionHandler;

message RGSSessionRegisterResponse
{
		uint64 Key = 1;
}
